--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,6 +1,6 @@
 body {
 #    background-color: #f4f4f4;
-    background-color: pink;
+    background-color: purple;
     margin-top: 50px;
     font-family: 'Lato';
 }
