--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,6 +1,7 @@
 body {
 #    background-color: #f4f4f4;
-    background-color: purple;
+    background-color: #FFA07A;
+ #   background-color: #FAD099;
     margin-top: 50px;
     font-family: 'Lato';
 }
